fixed deleting applications when rejecting and font being too big on mobile when cancer has no applications

--- a/client/src/styles/Dancer.css
+++ b/client/src/styles/Dancer.css
@@ -48,10 +48,18 @@ margin-right: auto;}
     margin-top: 5em;
     flex-direction: column;
     align-items: center;
+    padding: 20px 50px;
 }
 
 #no-open-dancer-listings a {
 color: black;
+}
+
+@media (max-width: 500px) {
+    #no-open-dancer-listings{
+        font-size: 0.7em;
+        padding: 10px 30px;
+    }
 }
 
 @media (max-width: 428px) {
